Recompile: generate paper_2026-03-01_1302.pdf

--- a/paper.tex
+++ b/paper.tex
@@ -189,27 +189,21 @@ Despite these successes, traditional tabular models struggled to capture nuanced
 
 \textbf{Multi-Armed Bandits (MABs)} emerged as a powerful method for online advertising around the 2010s to tackle the explore–exploit tradeoff, which consists of finding the optimal balance between choosing new ad policies with unknown performance and showing older ad policies with known positive performance \cite{schwartz2017customer, burtini2015improving}. MABs are a class of algorithms for dynamic decision-making under uncertainty, originally developed in mid-20th-century probability theory \cite{robbins1952sequential}. While MABs had been widely applied in areas such as clinical trials \cite{villar2015multi, thompson1933likelihood}, they were adopted in large-scale web and advertising platforms during the early 2010s \cite{li2010contextual,chapelle2011empirical, schwartz2017customer}.  
 
-MABs allow platforms to reduce unnecessary exposure to a suboptimal treatment by continuously updating the estimates of expected reward and uncertainty of which treatment is most likely to yield the highest reward \cite{kuleshov2014algorithms}. 
-
-In the context of online advertising, “treatments” are typically specific ad configurations, defined by parameters such as displacement cost, reserve price, ad load, and ad placement. “Rewards” typically represent user engagement metrics such as clicks or conversions \cite{schwartz2017customer}.
+MABs allow platforms to reduce unnecessary exposure to a suboptimal treatment by continuously updating the estimates of expected reward and uncertainty of which treatment is most likely to yield the highest reward \cite{kuleshov2014algorithms}. In the context of online advertising, “treatments” are typically specific ad configurations, defined by parameters such as displacement cost, reserve price, ad load, and ad placement. “Rewards” typically represent user engagement metrics such as clicks or conversions \cite{schwartz2017customer}.
 
 In contrast to traditional A/B tests, where there are randomized treatments assigned for a predetermined amount of time, MABs dynamically learn which configuration yields the highest reward for each user at a particular time. Although this adaptive learning framework manages the trade-off between minimizing regret from suboptimal treatments and exploring potentially superior configurations, defining the precise reward function to optimize remains an open challenge  \cite{wen2019learning}.
 
-To formalize multi-objective trade-offs such as balancing revenue and user satisfaction, utility functions have been employed in online advertising since the early 2000s \cite{engel2008incorporating}.Drawing on microeconomic utility theory, platforms formalized multi-objective trade-offs through scalar utility functions that encode multiple objectives—such as revenue, user satisfaction, and long-term platform health—into a single metric, enabling principled comparison and optimization \cite{engel2008incorporating}. When integrated into MAB frameworks, this unified reward signal guides exploration toward policies that balance short-term performance (e.g., clicks or conversions) with long-term considerations such as user trust and fatigue. 
+To formalize multi-objective trade-offs such as balancing revenue and user satisfaction, utility functions have been employed in online advertising since the early 2000s \cite{engel2008incorporating}. Drawing on microeconomic utility theory, platforms formalized multi-objective trade-offs through scalar utility functions that encode multiple objectives—such as revenue, user satisfaction, and long-term platform health—into a single metric, enabling principled comparison and optimization \cite{engel2008incorporating}. When integrated into MAB frameworks, this unified reward signal guides exploration toward policies that balance short-term performance (e.g., clicks or conversions) with long-term considerations such as user trust and fatigue. 
 
 Although utility-weighted bandits can encode long-term targets via proxy rewards, they remain structurally one-step: they estimate conditional expectations under a logging policy and do not represent policy-induced feedback loops, thereby limiting counterfactual evaluation of multi-step trajectories under alternative policies.
 
 \subsection{Advances in Deep Learning: Attention Models, Transformers, and Contextual Bandits}
 
-While embedding-based models greatly enhanced the predictive power of recommendation systems, capturing the full complexity of user sequences, especially over long time spans, remained a challenge for sequential deep learning methods such as  Long Short-Term Memory networks (LSTMs) and Gated Recurrent Units (GRUs) \cite{vaswani2017attention} \cite{gao2024mamba}. Traditional recurrent networks (e.g., LSTMs or GRUs) process sequences step by step, typically encoding an entire sequence into a single fixed-size vector \cite{Sutskever2014}. This design poses several challenges. Because Recurrent Neural Networks (RNNs) operate strictly in a sequential manner, they cannot process multiple parts of the sequence in parallel, creating bottlenecks and risking the loss or blurring of details, especially those from earlier steps in long sequences \cite{vaswani2017attention}.  Moreover, standard RNNs inherently prioritize recent inputs as information is passed along, which attenuates earlier signals and leads to the well-known vanishing gradient problem in lengthy sequences and fails to effectively capture long-term dependencies \cite{Bengio1994}\cite{Pascanu2013}. 
+While embedding-based models greatly enhanced the predictive power of recommendation systems, capturing the full complexity of user sequences, especially over long time spans, remained a challenge for sequential deep learning methods such as  Long Short-Term Memory networks (LSTMs) and Gated Recurrent Units (GRUs) \cite{vaswani2017attention, gao2024mamba}. Traditional recurrent networks (e.g., LSTMs or GRUs) process sequences step by step, typically encoding an entire sequence into a single fixed-size vector \cite{Sutskever2014}. This design poses several challenges. Because Recurrent Neural Networks (RNNs) operate strictly in a sequential manner, they cannot process multiple parts of the sequence in parallel, creating bottlenecks and risking the loss or blurring of details, especially those from earlier steps in long sequences \cite{vaswani2017attention}.  Moreover, standard RNNs inherently prioritize recent inputs as information is passed along, which attenuates earlier signals and leads to the well-known vanishing gradient problem in lengthy sequences and fails to effectively capture long-term dependencies \cite{Bengio1994, Pascanu2013}. 
 
+To address training inefficiencies in RNNs and the difficulty of capturing long-term dependencies, attention mechanisms allow direct access to any position in the sequence, enabling the model to focus on relevant features in the sequence regardless of their temporal distance \cite{vaswani2017attention}. By computing pairwise interactions across all positions in the sequence, Transformers overcome the sequential bottlenecks of RNNs and enable parallel computation \cite{vaswani2017attention}. The ability to attend to any part of the input at any time allows Transformers to model long-range dependencies with far greater efficiency and accuracy than RNN-based architectures \cite{vaswani2017attention}. This paradigm shift led to the development of the Transformer architecture, which entirely replaces recurrence with self-attention, fundamentally redefining sequence modeling \cite{vaswani2017attention}.
 
-To address training inefficiencies in RNNs and the difficulty of capturing long-term dependencies, attention mechanisms allow direct access to any position in the sequence, enabling the model to focus on relevant features in the sequence regardless of their temporal distance \cite{vaswani2017attention}. By computing pairwise interactions across all positions in the sequence, Transformers overcome the sequential bottlenecks of RNNs and enable parallel computation \cite{vaswani2017attention}.  This mechanism also allows the model to incorporate contextual signals, such as user demographics, session-level metadata, or item attributes, at any point in the sequence, rather than strictly depending on a running hidden state \cite{kang2018sasrec}. The ability to attend to any part of the input at any time allows Transformers to model long-range dependencies with far greater efficiency and accuracy than RNN-based architectures \cite{vaswani2017attention}. This paradigm shift led to the development of the Transformer architecture, which entirely replaces recurrence with self-attention, fundamentally redefining sequence modeling \cite{vaswani2017attention}.
-
-The Transformer’s parallel attention architecture is a natural fit for modern hardware. Since self-attention and feed-forward layers are implemented with large matrix operations, the model makes efficient use of Graphics Processing Units (GPUs) and Tensor Processing Units (TPUs), which excel at parallel computation \cite{vaswani2017attention}. Unlike RNNs that left many GPU cores underutilized due to their step-by-step nature, Transformers keep the hardware busy by processing many elements concurrently. This yields significantly shorter training times compared to earlier recurrent models. Moreover, Transformers scale up seamlessly: training can be distributed across multiple GPUs, and larger batches or longer sequences can be handled without a drop in throughput \cite{shim2022comparison}. Engineers can simply add more GPU workers to accommodate bigger models or more data, achieving near-linear speedups in many cases \cite{brown2020language}. The ability to train deep models efficiently at scale has unlocked previously impractical projects, and Transformer-based architectures (e.g. BERT, GPT) are now standard building blocks in modern AI systems \cite{brown2020language} \cite{kaplan2020scaling}. One of the key innovations of the Transformer architecture is its multi-head attention mechanism \cite{vaswani2017attention}. Instead of relying on a single attention distribution, multiple attention “heads” are trained in parallel, each with its own set of learned parameters. This design allows the model to capture a range of relationships or patterns within the same sequence \cite{vaswani2017attention}.In practice, each head can focus on different aspects. One head might emphasize local dependencies in the user’s interaction history, while another one might highlight more global, long-range correlations \cite{vaswani2017attention}.
-
-
-In an advertising context, multi-head attention naturally accommodates multi-objective learning \cite{ma2018modeling}. For example, one head could be tuned to prioritize short-term engagement metrics (e.g., click-through rate or CTR) by attending to recent user activities and relevant ad features, while another head could emphasize longer-term outcomes, such as mitigating ad fatigue or preserving user satisfaction \cite{zhao2019recommending} \cite{ma2018modeling}. Each head learns a distinct set of attention weights, enabling the model to isolate and capture unique signals that serve different goals \cite{an2024tmh}. The outputs from these multiple heads are then aggregated, typically concatenated and linearly transformed, into a single representation or score, providing a unified but multi-faceted embedding of user–ad interactions \cite{vaswani2017attention} \cite{lyu2023entire}. However, determining the appropriate attention heads and their optimal weighting remains a complex challenge \cite{vaswani2017attention}\cite{Kang2018} \cite{Voita2019}. The optimal weights may vary not only across different users and content types but also over time \cite{Zhou2018} \cite{Zhou2019}. Additionally, shifting business objectives, engineering constraints, and competing optimization objectives further complicate the design process \cite{Mehrotra2018} \cite{Mehrotra2020} \cite{Jannach2023}. 
+The ability to train deep models efficiently at scale has unlocked previously impractical projects, and Transformer-based architectures (e.g. BERT, GPT) are now standard building blocks in modern AI systems \cite{brown2020language} \cite{kaplan2020scaling}. One of the key innovations of the Transformer architecture is its multi-head attention mechanism \cite{vaswani2017attention}. In an advertising context, multi-head attention naturally accommodates multi-objective learning \cite{ma2018modeling}. For example, one head could be tuned to prioritize short-term engagement metrics (e.g., click-through rate or CTR) by attending to recent user activities and relevant ad features, while another head could emphasize longer-term outcomes, such as mitigating ad fatigue or preserving user satisfaction \cite{zhao2019recommending} \cite{ma2018modeling}. Each head learns a distinct set of attention weights, enabling the model to isolate and capture unique signals that serve different goals \cite{an2024tmh}. The outputs from these multiple heads are then aggregated, typically concatenated and linearly transformed, into a single representation or score, providing a unified but multi-faceted embedding of user–ad interactions \cite{vaswani2017attention} \cite{lyu2023entire}. However, determining the appropriate attention heads and their optimal weighting remains a complex challenge \cite{vaswani2017attention}\cite{Kang2018} \cite{Voita2019}. The optimal weights may vary not only across different users and content types but also over time \cite{Zhou2018} \cite{Zhou2019}. Additionally, shifting business objectives, engineering constraints, and competing optimization objectives further complicate the design process \cite{Mehrotra2018} \cite{Mehrotra2020} \cite{Jannach2023}. 
 
 %How is head selection and weighing typically done 
 Selecting the right heads in Multi-Task Attention Models and determining their optimal weighting is not a deterministic process \cite{Michel2019} \cite{Voita2019}. It typically requires iterative experimentation, involving both offline analysis (e.g., hyperparameter tuning, head ablation studies) and online testing (A/B experiments) \cite{Michel2019} \cite{kang2018sasrec}. This process is particularly challenging for new users and new content, where slow adaptation can result in suboptimal personalization and early churn \cite{Schein2002, Bobadilla2013}. 
